<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText_text_to_do"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_10dp"
            android:hint="@string/YourToDoText" />

        <TextView
            android:id="@+id/textView_Date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_5dp"
            android:padding="@dimen/spacing_10dp"
            android:text="@string/Date" />

        <TextView
            android:id="@+id/textView_Time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_5dp"
            android:padding="@dimen/spacing_10dp"
            android:text="@string/Time" />

        <TextView
            android:id="@+id/textView_Location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_5dp"
            android:padding="@dimen/spacing_10dp"
            android:text="@string/Location" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_10dp">

            <Button
                android:id="@+id/button_Cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@android:string/cancel" />

            <Button
                android:id="@+id/button_Save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/Save" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>